--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                         <h2 class="fw-bold text-center mb-4">Welcome to Pioneer bank</h2>
                         <div class="submit-area shadow p-4 mb-5 bg-body rounded ">
                             <h4 >Login</h4>
-                            <input type="email" class="form-control mb-3" placeholder="Email">
-                            <input type="password" class="form-control mb-3" placeholder="Password">
+                            <input type="email" id="emailInput" class="form-control mb-3" placeholder="Email">
+                            <input type="password" id="passwordInput" class="form-control mb-3" placeholder="Password">
                             <button id="loginBtn" class="btn btn-success pt-2">Enter</button>
                         </div>
                     </div>
